# mimic_baseline_2

./: .gitignore  INSTALL.md  README.md  imgui.ini
GMT/: setup.py
GMT/GMT/robots/: delayed_implicit_actuator.py  g1.py  q1.py  soma.py  tn_delayed_pd_actuators.py
GMT/GMT/tasks/: __init__.py
GMT/config/: extension.toml
GMT/tests/: test_motion_loader.py  test_tracking_commands_mask_write.py
assets/Q1/meshes/: L_ankle_pitch_link.STL  L_ankle_roll_link.STL  L_forearm_yaw_link.STL  L_hip_roll_link.STL  L_shoulder_yaw_link.STL  R_ankle_pitch_link.STL  R_shoulder_yaw_link.STL  (+3 more)
assets/h2_description/: H2.urdf
newton_lab/: pyproject.toml
newton_lab/newton_lab/: __init__.py
newton_lab/newton_lab/app/: __init__.py  common.py  eval.py  play.py  train.py
newton_lab/newton_lab/datasets/: __init__.py  local.py
newton_lab/newton_lab/envs/: __init__.py  manager_based_env.py
newton_lab/newton_lab/managers/: __init__.py  core.py
newton_lab/newton_lab/rl/: __init__.py  adapter.py  config.py  on_policy_runner.py  runner.py
newton_lab/newton_lab/rl/config/: rsl_rl.yaml
newton_lab/newton_lab/robots/: __init__.py  g1.py
newton_lab/newton_lab/sim/: __init__.py  newton_sim.py
newton_lab/newton_lab/tasks/: __init__.py  builtin.py  registry.py
newton_lab/newton_lab/tasks/config/: g1_tracking.yaml  g1_velocity.yaml
newton_lab/tests/: test_datasets.py  test_env.py  test_registry.py  test_runtime.py  test_tasks.py
scripts/: __init__.py  replay_retarget_npz.py
scripts/rsl_rl/: load_motion_file.py  motion_file.yaml  train.py
tests/: test_replay_retarget_npz.py
(+56 files in other folders)
